<resources>
    <string name="app_name">OpenCV_EdgeDetect001</string>
    <string name="app_name2">TheWholeWorldIsSound</string>
    <string name="loader_text">I\'m loading the sounds now</string>
    <string name="loader_text_done">All sounds are now loaded</string>
    <string name="blobConfigFileName">blobConfig.xml</string>
    <string name="thresholdStepDefault">30</string>
    <string name="minThresholdDefault">30</string>
    <string name="maxThresholdDefault">220</string>
    <string name="minDistBetweenBlobsDefault">10</string>
    <string name="minAreaDefault">1800</string>
    <string name="maxAreaDefault">7000</string>
    <string name="cancel_setup">cancel_setup</string>
    <string name="accept_setup">accept_setup</string>
    <string name="done_setup">done_setup</string>
    <string name="instruction">After pressing the Play button \n Hover phone over colors \n to play a sound!</string>
    <string name="tutorial_instrument_1">Scroll up and down \n to match a Color with a Sound!</string>
    <string name="tutorial_instrument_2">Click on the instrument \n to listen to it!</string>
    <string name="tutorial_instrument_3">Click here \n to accept your new sound!</string>
    <string name="tutorial_instrument_4">Click here \n to save your work!</string>
    <string name="tutorial_instrument_5">Click here \n to start playing!</string>
    <string name="achtung">Icons made by http://www.freepik.com</string>
    <string name="title_activity_balloon">balloonActivity</string>
</resources>
