<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="585dp"
        android:layout_height="309dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="2dp">

        <LinearLayout
            android:layout_width="232dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="104dp">


            double ,
            double ,
            double ,
            double ,
            double


            <EditText
                android:id="@+id/thresholdStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="thresholdStep"
                android:inputType="textPersonName"
                android:text="@string/thresholdStepDefault"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="50dp" />

            <EditText
                android:id="@+id/minThreshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="minThreshold"
                android:inputType="textPersonName"
                android:text="@string/minThresholdDefault"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="50dp" />

            <EditText
                android:id="@+id/maxThreshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="maxThreshold"
                android:inputType="textPersonName"
                android:text="@string/maxThresholdDefault"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="50dp" />

            <EditText
                android:id="@+id/minDistBetweenBlobs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="minDistBetweenBlobs"
                android:inputType="textPersonName"
                android:text="@string/minDistBetweenBlobsDefault"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="50dp" />

            <EditText
                android:id="@+id/maxArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="maxArea"
                android:inputType="textPersonName"
                android:text="@string/maxAreaDefault"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="50dp" />

            <EditText
                android:id="@+id/minArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="minArea"
                android:inputType="textPersonName"
                android:text="@string/minAreaDefault"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="50dp" />

            <Button
                android:id="@+id/button_configure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToLoader"
                android:text="Do it" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="thresholdStep"
                android:textSize="33sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="minThreshold"
                android:textSize="33sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="maxThreshold"
                android:textSize="33sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="thresholdStep"
                android:textSize="33sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="thresholdStep"
                android:textSize="33sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="thresholdStep"
                android:textSize="33sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>